# evm-parser-performance-benchmark

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
abi/: erc20.json  mixed.json
rust-cli/: Cargo.toml
rust-cli/src/: main.rs
rust-napi/: Cargo.toml  package.json
rust-napi/src/: lib.rs
src/: bench_napi.ts  bench_rust.ts  bench_viem.ts  generate.ts  suite.ts
